<resources>
    <string name="app_name">MyTask</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="txt_toolbar">Toolbar</string>
    <string name="txt_floating_action_button">FloatActionButton</string>
    <string name="txt_navigation_view">NavigationView</string>
    <string name="txt_other">Other</string>
    <string name="txt_test">Test UI Animation</string>
    <string name="title_activity_code_lab">CodeLabActivity</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="title_activity_view_db">ViewDBActivity</string>
    <string name="title_activity_list_detail">ListDetailActivity</string>
    <string name="title_activity_task_note">TaskNoteActivity</string>
    <string name="removed_positions">removed_positions</string>
    <string name="content_delete_list">will be deleted forever.</string>
    <string name="remind_me">Remind me</string>
    <string name="reminder_text_task_detail"><![CDATA[Set Date & Reminder]]></string>
    <string name="view_completed_to_do">VIEW COMPLETED TO-DOS</string>
    <string name="completed_to_do">COMPLETED TO-DOS</string>
    <string name="add_list">Add List</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="title_activity_dropbox1">Dropbox1</string>
    <string name="add_sub_task">Add subTask</string>
</resources>
