...
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/chkBox"
                android:src="@mipmap/wl_icon_task_detail_checkbox"
                android:layout_gravity="center_vertical"
                android:tintMode="src_atop"
                android:tint="@color/grey_600"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
...

        </LinearLayout>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextTitle"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/star"
                android:layout_toStartOf="@+id/star"

                android:layout_toRightOf="@+id/chkBox"
                android:layout_toEndOf="@+id/chkBox"
...
                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="1dp"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:id="@+id/addSubTask"
                        android:background="@color/white"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true">

                    <ImageView
                            android:layout_width="35dp"
...
