...
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editTextComment"
            android:padding="5dp"
            android:layout_centerVertical="true"
            android:text="Add a comment..."
            android:layout_toStartOf="@+id/sendComment"
            android:layout_toRightOf="@+id/upload"
            />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="SEND"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:id="@+id/sendComment"
            android:layout_alignParentEnd="true"
            />
</RelativeLayout>
...
