...

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/removeSubTaskBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="removeSubTask" />
                <Button
                    android:id="@+id/removeCommentBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="removeComment" />

            </TableRow>

...
